parser/testdata/invalid/missing_open_brace.oc
# Error: no opening brace after block name.
model gpt4
  provider = "openai"
}
